# X-Bank

./: Cargo.toml  README.md  docker-compose.yml  init.sql  init_audit.sql
account-service/: Cargo.toml  Dockerfile  sqlx-data.json
account-service/src/: main.rs
archive/src/: main.rs
archive/templates/: account.html  login.html  register.html  success.html
audit-service/: Cargo.toml  Dockerfile  sqlx-data.json
audit-service/src/: main.rs
auth-service/: Cargo.toml  Dockerfile
auth-service/src/: main.rs
frontend-service/: Cargo.toml  Dockerfile
frontend-service/src/: main.rs
frontend-service/templates/: index.html
kubernetes/: Cargo.toml
payment-service/: Cargo.toml  Dockerfile
payment-service/src/: main.rs
src/: main.rs
templates/: account.html  login.html  register.html  success.html
transaction-service/: Cargo.toml  Dockerfile  sqlx-data.json
transaction-service/src/: main.rs
ubi-service/: Cargo.toml  Dockerfile  sqlx-data.json
ubi-service/src/: main.rs
