[package]
name = "xbank"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
askama = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonwebtoken = "8.3"
pqc_kyber = { version = "0.7", features = ["std"] }
tokio = { version = "1.0", features = ["full"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"