[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
sqlx = { version = "0.6", features = ["runtime-tokio-rustls", "postgres", "offline"] }
jsonwebtoken = "8.1"
argon2 = "0.4"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }